# algorithms

./: README.md  main.py  pyproject.toml  sorter.py  test_sorter.py
.github/workflows/: ci.yml
