[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["PfMartin <martinpfatrisch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
